example/src/snapshots/rust_sitter_example__partial_handles__tests__failed_parses-2.snap
---
source: example/src/partial_handles.rs
assertion_line: 131
expression: "grammar::parse(\"1 - 2 -\")"
---
Err(
    [
        ParseError {
            reason: MissingToken(
                "Expression_Number_0",
            ),
            start: 7,
            end: 7,
        },
    ],
)
