example/src/snapshots/rust_sitter_example__partial_handles__tests__failed_parses-3.snap
---
source: example/src/partial_handles.rs
assertion_line: 132
expression: "grammar::parse(\"a1\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "a",
                        ),
                        start: 0,
                        end: 1,
                    },
                ],
            ),
            start: 0,
            end: 1,
        },
    ],
)
