example/src/snapshots/rust_sitter_example__partial_handles__tests__failed_parses-4.snap
---
source: example/src/partial_handles.rs
assertion_line: 133
expression: "grammar::parse(\"1a\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "a",
                        ),
                        start: 1,
                        end: 2,
                    },
                ],
            ),
            start: 1,
            end: 2,
        },
    ],
)
